@@ -229,7 +229,7 @@
 							<encoding>UTF-8</encoding>
        						<inputEncoding>UTF-8</inputEncoding>
         					<outputEncoding>UTF-8</outputEncoding>
-        					<argLine>-Xms256m -Xmx512m -XX:MaxPermSize=128m -ea -Dfile.encoding=UTF-8</argLine>
+        					<argLine> -Dfile.encoding=UTF-8</argLine>
 						</configuration>
 
 					</execution>
